[package]
name = "bmp085"
version = "0.2.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
description = "A Rust driver for the Adafruit BMP085/BMP180 thermometer/barometer device."
repository = "https://github.com/celaus/rust-bmp085"
keywords = ["bmp085", "adafruit", "bmp180"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
i2cdev = "0.4.2"

[dev-dependencies]
byteorder = "0.5.3"
rand = "0.3.15"
