[package]
name = "bmp085"
version = "0.2.1"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
description = "A Rust driver for the Adafruit BMP085/BMP180 thermometer/barometer device."
repository = "https://github.com/celaus/rust-bmp085"
keywords = ["bmp085", "adafruit", "bmp180"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
i2cdev = "0.5.1"

[dev-dependencies]
byteorder = "1.4.3"
rand = "0.8.5"
